[gd_scene load_steps=6 format=2]

[ext_resource path="res://DiceCharacter.gd" type="Script" id=1]
[ext_resource path="res://assets/placeholders-Sheet.png" type="Texture" id=2]
[ext_resource path="res://EmotionSlot.tscn" type="PackedScene" id=3]

[sub_resource type="Animation" id=1]
resource_name = "Idle"
length = 10.0
loop = true
tracks/0/type = "bezier"
tracks/0/path = NodePath("Sprite:position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 1 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("Sprite:position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 1 )
}

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "bezier"
tracks/0/path = NodePath("Sprite:position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("Sprite:position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}

[node name="DiceCharacter" type="Node2D"]
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )
hframes = 5

[node name="EmotionSlots" type="Position2D" parent="."]
position = Vector2( -1, -132 )

[node name="EmotionSlot" parent="EmotionSlots" instance=ExtResource( 3 )]
position = Vector2( -40, 11 )

[node name="EmotionSlot2" parent="EmotionSlots" instance=ExtResource( 3 )]
position = Vector2( 1, -3 )

[node name="EmotionSlot3" parent="EmotionSlots" instance=ExtResource( 3 )]
position = Vector2( 38, 9 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Idle = SubResource( 1 )
anims/RESET = SubResource( 2 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
