[gd_scene load_steps=22 format=2]

[ext_resource path="res://assets/Mocha Assets/Characters/booba.PNG" type="Texture" id=1]
[ext_resource path="res://DiceCharacters/EmotionSlotGroup.tscn" type="PackedScene" id=2]
[ext_resource path="res://DiceCharacters/DiceCharacter.gd" type="Script" id=3]
[ext_resource path="res://DiceCharacters/Personality.tscn" type="PackedScene" id=4]
[ext_resource path="res://Sound Effects/Dice_Roll.wav" type="AudioStream" id=5]
[ext_resource path="res://assets/Mocha Assets/Characters/d6.PNG" type="Texture" id=6]
[ext_resource path="res://assets/Mocha Assets/Characters/speen.PNG" type="Texture" id=7]
[ext_resource path="res://Music/Lay_the_Dice.ogg" type="AudioStream" id=8]
[ext_resource path="res://Sound Effects/mocha sounds/turu_turu_turu.wav" type="AudioStream" id=9]
[ext_resource path="res://Sound Effects/mocha sounds/noot_noot.wav" type="AudioStream" id=10]
[ext_resource path="res://Sound Effects/mocha sounds/aww.wav" type="AudioStream" id=11]
[ext_resource path="res://Sound Effects/mocha sounds/semwiri_semwiri_semwiri_pling_pling.wav" type="AudioStream" id=12]
[ext_resource path="res://Sound Effects/mocha sounds/hnng.wav" type="AudioStream" id=13]
[ext_resource path="res://Sound Effects/mocha sounds/pling_pling_2.wav" type="AudioStream" id=14]
[ext_resource path="res://Sound Effects/mocha sounds/pling_pling.wav" type="AudioStream" id=15]

[sub_resource type="Animation" id=3]
length = 5.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 2 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 2.7, 4.9 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( -1, -2 ), Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=4]
length = 0.2
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 1, 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.05, 0.1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 0.957489, 1.26667 ), Vector2( 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.05, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 26, 13 ), Vector2( 1, -4 ), Vector2( 59, -31 ), Vector2( 8.28323, 10 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Sprite:rotation_degrees")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 14.1664, 0.0 ]
}
tracks/4/type = "method"
tracks/4/path = NodePath(".")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0.2 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "change_to_random_state"
} ]
}
tracks/5/type = "audio"
tracks/5/path = NodePath("AudioStreamPlayer")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"clips": [ {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource( 5 )
} ],
"times": PoolRealArray( 0 )
}
tracks/6/type = "value"
tracks/6/path = NodePath("Sprite/Head:texture")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 0.05, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 7 ), ExtResource( 6 ), ExtResource( 6 ) ]
}

[sub_resource type="Animation" id=5]
length = 5.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 4 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1, 2.5, 3.8, 5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( -2, -1 ), Vector2( 0, 0 ), Vector2( 6, -1 ), Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=1]
length = 10.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2.5, 7, 10 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( -7, 6 ), Vector2( 5, 2 ), Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite/Head:texture")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 6 ) ]
}

[sub_resource type="Animation" id=6]
length = 10.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 3 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 2.5, 5, 7.5, 10 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( -7, 3 ), Vector2( 0, 0 ), Vector2( 8, 4 ), Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "bezier"
tracks/0/path = NodePath("Sprite:position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("Sprite:position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Sprite:scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Sprite:rotation_degrees")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Sprite:frame")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("Sprite/Head:texture")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ ExtResource( 7 ) ]
}

[node name="DiceCharacter" type="Node2D"]
script = ExtResource( 3 )

[node name="Personality" parent="." instance=ExtResource( 4 )]

[node name="IndifferentState" parent="Personality/StateSet" index="0"]
sounds = [ ExtResource( 12 ), ExtResource( 9 ) ]

[node name="TalkMarkov" parent="Personality/StateSet/IndifferentState" index="0"]
friend_chance = 50
wrong_chance = 0

[node name="FlirtMarkov" parent="Personality/StateSet/IndifferentState" index="1"]
wrong_chance = 75

[node name="SmileyMarkov" parent="Personality/StateSet/IndifferentState" index="2"]
indifference_chance = 10
love_chance = 30
friend_chance = 80
wrong_chance = 0

[node name="SadFaceMarkov" parent="Personality/StateSet/IndifferentState" index="3"]
love_chance = 10

[node name="LoveState" parent="Personality/StateSet" index="1"]
sounds = [ ExtResource( 10 ), ExtResource( 11 ) ]

[node name="FlirtMarkov" parent="Personality/StateSet/LoveState" index="1"]
indifference_chance = 0
friend_chance = 20

[node name="SmileyMarkov" parent="Personality/StateSet/LoveState" index="2"]
love_chance = 75

[node name="FriendlyState" parent="Personality/StateSet" index="2"]
sounds = [ ExtResource( 15 ), ExtResource( 14 ) ]

[node name="TalkMarkov" parent="Personality/StateSet/FriendlyState" index="0"]
love_chance = 30
wrong_chance = 50

[node name="FlirtMarkov" parent="Personality/StateSet/FriendlyState" index="1"]
wrong_chance = 20

[node name="WrongState" parent="Personality/StateSet" index="3"]
sounds = [ ExtResource( 10 ), ExtResource( 13 ) ]

[node name="TalkMarkov" parent="Personality/StateSet/WrongState" index="0"]
love_chance = 10

[node name="FlirtMarkov" parent="Personality/StateSet/WrongState" index="1"]
indifference_chance = 0
love_chance = 10
wrong_chance = 50

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
hframes = 5

[node name="Head" type="Sprite" parent="Sprite"]
show_behind_parent = true
texture = ExtResource( 7 )

[node name="EmotionSlotGroup" parent="." instance=ExtResource( 2 )]
position = Vector2( -7, -388 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "Idle"
anims/Angry = SubResource( 3 )
anims/Change = SubResource( 4 )
anims/Happy = SubResource( 5 )
anims/Idle = SubResource( 1 )
anims/Love = SubResource( 6 )
anims/RESET = SubResource( 2 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
volume_db = -10.0

[node name="MusicStream" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )
volume_db = -20.0

[editable path="Personality"]
[editable path="Personality/StateSet/IndifferentState"]
[editable path="Personality/StateSet/LoveState"]
[editable path="Personality/StateSet/FriendlyState"]
[editable path="Personality/StateSet/WrongState"]
